(library
 (name aeron_ocaml)
 (libraries base shapeshifter)
 (preprocess
  (pps ppx_jane))
 (foreign_stubs
  (language c)
  (names aeron_ocaml_client))
 (foreign_archives aeron)
 (ocamlopt_flags -O3 -linkall -S))

(rule
 (deps
  (source_tree aeron))
 (targets libaeron.a libaeron.so)
 (action
  (no-infer
   (progn
    (chdir
     aeron
     (run ./cppbuild/cppbuild --no-tests))
    (copy aeron/cppbuild/Release/lib/libaeron_static.a libaeron.a)
    (copy aeron/cppbuild/Release/lib/libaeron.so libaeron.so)))))
